# internal/controller/quiz/DeleteStudent.go
@@ -1,0 +1,52 @@
+package quiz
+
+import (
+	"net/http"
+	"strconv"
+
+	"github.com/gin-gonic/gin"
+	"github.com/nurzzaat/create_AI_quiz/internal/models"
+)
+
+//	@Tags		Quiz
+//	@Accept		json
+//	@Produce	json
+//	@Param		quizId		path	int	true	"quizId"
+//	@Param		studentId	path	int	true	"studentId"
+//	@Security	ApiKeyAuth
+//	@Success	200		{object}	models.SuccessResponse
+//	@Failure	default	{object}	models.ErrorResponse
+//	@Router		/students/quiz/{quizId}/delete/{studentId} [delete]
+func (qc *QuizController) DeleteStudentFromQuiz(c *gin.Context) {
+	roleID := c.GetUint("roleID")
+	if roleID == 2 {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "User is required",
+					Message: "You are not admin user",
+				},
+			},
+		})
+		return
+	}
+	quizId, _ := strconv.Atoi(c.Param("quizId"))
+	studentId, _ := strconv.Atoi(c.Param("studentId"))
+
+	err := qc.QuizRepository.DeleteStudentFromQuiz(c, quizId , studentId)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "ERROR_DELETE_TO_QUIZ",
+					Message: "Can't delete to quiz",
+					Metadata: models.Properties{
+						Properties1: err.Error(),
+					},
+				},
+			},
+		})
+		return
+	}
+	c.JSON(200, models.SuccessResponse{Result: "Success"})
+}
