# internal/controller/router.go
@@ -63,9 +63,10 @@ func Setup(app pkg.Application, router *gin.Engine) {
 	}
 	studentRouter := router.Group("/students")
 	{
+		studentRouter.GET("" , quizController.GetAllUser)
 		studentRouter.GET("/:quizId", quizController.GetStudentsByQuizID)
 		studentRouter.POST("/quiz/:quizId/add/:studentId", quizController.AddStudentToQuiz)
-		studentRouter.DELETE("/quiz/:quizId/delete/:studentId")
-		studentRouter.GET("/quiz/:quizId/result" ,quizController.GetStudentResult)
+		studentRouter.DELETE("/quiz/:quizId/delete/:studentId", quizController.DeleteStudentFromQuiz)
+		studentRouter.GET("/quiz/:quizId/result", quizController.GetStudentResult)
 	}
 }
